--- a/css/layout.css
+++ b/css/layout.css
@@ -9489,6 +9489,10 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+.btn, #cookie_container .cookie_inner a {
+  white-space: normal;
+}
+
 /**
 * Styling for default searchform (if installed)
 */
@@ -9560,12 +9564,6 @@ header a {
   }
 }
 
-@media (min-width: 768px) {
-  header .container, header #cookie_container .cookie_inner, #cookie_container header .cookie_inner {
-    padding: 0;
-  }
-}
-
 header .bottom-bar {
   position: absolute;
   bottom: 0;
@@ -9622,10 +9620,6 @@ footer {
   padding-bottom: 15px;
   color: #343a40;
   font-size: 0.9rem;
-}
-
-footer .container, footer #cookie_container .cookie_inner, #cookie_container footer .cookie_inner {
-  padding: 0;
 }
 
 footer a {
