--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -25,12 +25,6 @@ header {
             }
         }
     }
-
-    @include media-breakpoint-up(md) {
-        .container {
-            padding: 0;
-        }
-    }
     .bottom-bar {
         position: absolute;
         bottom: 0;
