--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -50,4 +50,7 @@
             } 
         }
     }
+}
+.btn {
+    white-space: normal;
 }  
